src/components/layouts/layout.css
body {
  display: flexbox;
  overflow-x: hidden;
  margin: 0;
  padding: 0;
  font-family: "Quicksand", sans-serif;

  -webkit-touch-callout: none !important;
  -webkit-user-select: none !important;
  -khtml-user-select: none !important;
  -moz-user-select: none !important;
  -ms-user-select: none !important;
  -webkit-tap-highlight-color: transparent !important;
  user-select: none !important;
}

.projectLayout {
  overflow-y: hidden;
}

.projectInner {
  max-width: 85.3125rem;
  margin: 0 auto;
  padding: 0 10%;
}

